# mikroapi-rest-python

./: .gitignore  README.md  pyproject.toml
src/mikroapi/: __init__.py  api.py  client.py  exceptions.py
src/mikroapi/models/: base.py  interface.py  system.py
src/mikroapi/services/: __init__.py  base.py  interface.py  system.py
