[project]
name = "mikroapi"
version = "0.1.0"
description = "Mikrotik REST API client"
readme = "README.md"
authors = [
    { name = "Maksim Kachur", email = "me@maksimkachur.ru" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
]
